uv charging analysis

--- a/Pulse/20240408_impulse_analysis.ipynb
+++ b/Pulse/20240408_impulse_analysis.ipynb
@@ -69,17 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "a1b23778-6f65-448b-acf8-4944cac3b9ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a700356280>"
+       "<matplotlib.legend.Legend at 0x1a70b74be50>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -118,9 +118,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "763cc092-bdc2-4a65-b0ef-af8bd6d5a01f",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
