update backscatter low pressure

--- a/control/freq_comb.ipynb
+++ b/control/freq_comb.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This code generates timestream template for AFG1022 that gives frequency comb for calibration, mostly following Gadi's legacy Matlab code."
+    "This code generates timestream template for AFG1022/AFT1062 that gives frequency comb for calibration, mostly following Gadi's legacy Matlab code."
    ]
   },
   {
@@ -51,14 +51,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# `freq` * `nsample` has to be roughly larger than 100 kHz\n",
+    "# `rep_rate` * `nsample` has to be roughly larger than 100 kHz\n",
     "# to exceed nyquist frequency of frequency range we're working with\n",
     "# AFG1022 has max samping rate of 125 MHz\n",
-    "rep_rate = 100\n",
-    "nsample = 8000\n",
     "\n",
-    "fstart, fend = 40000, 90000\n",
-    "delta_f = 2000\n",
+    "# rep_rate = 100\n",
+    "# nsample = 8000\n",
+    "rep_rate = 100\n",
+    "nsample = 1000000\n",
+    "\n",
+    "fstart, fend = 50000, 100000\n",
+    "delta_f = 10000\n",
     "ff_want = np.arange(fstart, fend+delta_f, delta_f)"
    ]
   },
