update daq code

--- a/control/freq_comb.ipynb
+++ b/control/freq_comb.ipynb
@@ -296,7 +296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "microspheres",
+   "display_name": "nanospheres",
    "language": "python",
    "name": "python3"
   },
